# py-aozora-server

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
aozora_server/: dependencies.py  main.py
aozora_server/routers/: books.py
tests/: test_aozora_server.py
tests/data/: test.db
tests/data/data_gen/: README.md  main.py
