[tool.poetry]
name = "py-aozora-server"
version = "0.1.0"
description = ""
authors = ["Ken Sato <ksato9700@gmail.com>"]
readme = "README.md"
packages = [{include = "aozora_server"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
py-aozora-data = {path = "../py-aozora-data"}
orjson = "^3.8.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
black = {version = "^22.10.0", allow-prereleases = true}
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
